Home Work #4 (IShop3, BR2JSX, RainbowFrame)

--- a/RainbowFrame/package.json
+++ b/RainbowFrame/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ishop",
+  "name": "rainbow-frame",
   "version": "1.0.0",
-  "description": "Интернет магазин",
+  "description": "Rainbow frames",
   "main": "App.js",
   "scripts": {
     "build": ".\\node_modules\\.bin\\webpack",
