--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -5,18 +5,33 @@
   "main": "App.js",
   "scripts": {
     "build": ".\\node_modules\\.bin\\webpack",
-    "start": ".\\node_modules\\.bin\\webpack-dev-server --progress --colors"
+    "start": ".\\node_modules\\.bin\\webpack-dev-server --progress --colors",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
+  "jest": {
+    "verbose": true,
+    "transform": {
+      ".*": "./setupJest.js"
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.8.0",
+    "enzyme-to-json": "^3.3.5",
     "extract-text-webpack-plugin": "^3.0.2",
+    "jest": "^21.2.1",
+    "react-test-renderer": "^16.1.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
